--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,20 @@
 {
   "manifest_version": 2,
-
   "name": "TUM eAccess ",
   "description": "TUM eAccess: Access to Electronic Media",
   "version": "1.4",
   "background": {
-        "scripts": ["background.js"],
-        "persistent": false
-    },
-   "icons": {                   
+    "scripts": [
+      "background.js"
+    ],
+    "persistent": false
+  },
+  "icons": {
     "19": "icon.png",
     "38": "icon.png",
     "48": "icon.png",
-    "128": "icon.png"  
-  },  
+    "128": "icon.png"
+  },
   "browser_action": {
     "default_icon": "icon.png"
   },
